@@ -57,6 +57,7 @@ val print_graph : unit -> std_ppcmds
 val print_classes : unit -> std_ppcmds
 val print_coercions : unit -> std_ppcmds
 val print_path_between : Classops.cl_typ -> Classops.cl_typ -> std_ppcmds
+val print_canonical_structures : unit -> std_ppcmds
 
 val inspect : int -> std_ppcmds
 
